# esp-hal

./: .gitignore  README.md  esp-hal.code-workspace  index.html
.github/workflows/: ci.yml  dispatch.yml  hil-dispatch.yml  hil-label.yml  hil-slash.yml  hil.yml
docs/esp32/: search-index.js  settings.html  src-files.js
docs/esp32c2/: crates.js  search-index.js  src-files.js
docs/esp32c3/: search-index.js  src-files.js
docs/esp32c6/: crates.js  help.html  src-files.js
docs/esp32h2/: crates.js  src-files.js
docs/esp32p4/: crates.js  settings.html
docs/esp32s2/: crates.js  search-index.js  src-files.js
docs/esp32s3/: crates.js
documentation/esp32/: sidebar-items.js  struct.AES.html  struct.APB_CTRL.html  struct.EFUSE.html  struct.EMAC_DMA.html  struct.FLASH_ENCRYPTION.html  (+15 more)
esp-backtrace/: Cargo.toml  README.md
esp-bootloader-esp-idf/: Cargo.toml
esp-hal/: CHANGELOG.md  Cargo.toml  MIGRATING-1.0.0.md  README.md  build.rs
esp-hal-common/: Cargo.toml
esp-phy/: Cargo.toml
esp-println/: Cargo.toml  README.md  build.rs
esp-radio/: Cargo.toml
esp-rom-sys/: Cargo.toml
esp-rtos/: Cargo.toml
esp-storage/: Cargo.toml
esp32c6-hal/: Cargo.toml
esp32c6-lp-hal/: Cargo.toml
esp32s2-hal/: Cargo.toml
examples/: Cargo.toml
resources/: index.html
xtask/: Cargo.toml
xtask/resources/metadata/: esp32.toml  esp32c3.toml  esp32s2.toml  esp32s3.toml
xtask/resources/templates/: advanced_serial.tmpl  hello_world.tmpl
xtask/src/: generate.rs  main.rs
xtask/src/commands/: mod.rs  run.rs
xtask/src/commands/release/: post_release.rs
(+395079 files in other folders)
