[package]
name    = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow     = "1.0.65"
clap       = { version = "4.0.10", features = ["derive"] }
env_logger = "0.9.1"
log        = "0.4.17"
minijinja  = { version = "0.23.0",  features = ["source"]}
serde      = { version = "1.0.145", features = ["derive"] }
strum      = { version = "0.24.1",  features = ["derive"] }
toml       = "0.5.9"
